syntax = "proto3";

package c1.connector.v2;

option go_package = "github.com/conductorone/baton-sdk/pb/c1/connector/v2";

message ExternalTicketSettings {
  bool enabled = 1;
}
